# codingame_helper

./: Cargo.toml
src/: error.rs  game_session.rs  language.rs  main.rs
tpl/rust/: Cargo.toml  CodingGame.toml
tpl/rust/src/: lib.rs  main.rs
tpl/rust/tests/: codingame_tests.rs
